@@ -1,11 +1,13 @@
 package com.example.daweb.acordiaTest;
 
-import com.example.daweb.acordia2310.persistence.Entity.AlumnoEntity;
-import com.example.daweb.acordia2310.persistence.Repository.AlumnoRepository;
+import com.example.daweb.RaquelyMiguel.persistence.entities.Alumno;
+import com.example.daweb.RaquelyMiguel.persistence.repositories.AlumnoRepository;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 import org.springframework.boot.test.context.SpringBootTest;
 
+import java.lang.reflect.Array;
+import java.util.Arrays;
 import java.util.List;
 
 @SpringBootTest
@@ -15,10 +17,10 @@ public class TestFindAll {
     void testFindAll() {
         AlumnoRepository repo = Mockito.mock(AlumnoRepository.class);
 
-        // Lo que queremos que devuelva
-        Mockito.when(repo.findAll()).thenReturn(List.of(new AlumnoEntity(), new AlumnoEntity()));
+        Mockito.when(repo.findAll())
+                .thenReturn(Arrays.asList(new Alumno(), new Alumno()));
 
-        // Comprobación super simple
         assert repo.findAll().size() == 2;
     }
+
 }
